DJND update config chat